Correction bugs au niveau des tris et regroupements factures

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="icon" href="/favicon.ico" />
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
